style.css
html {
  box-sizing: border-box;
}

body {
  margin: 0;
  min-height: 100vh;
  background-color: rgb(255, 255, 255);
  /* background: rgb(193,199,192); */
  /* background: radial-gradient(circle, rgba(193,199,192,1) 0%, rgba(255,222,161,1) 100%); */
  font-family: 'Kalam', cursive, sans-serif;
}

#navigation{
    display: flex;
    justify-content: flex-end;

  }

#settings, #restart{
  border:none;
  font-size: 1.5rem;
  width: 50px;
  height: 50px;
  border-radius: 50%;
  margin-right: 5px;
  margin-top: 10px;
  color:#181010;;
  background-color: rgba(206, 205, 205, 0.905);
}

#settings:hover, #restart:hover{
  filter: brightness(90%);
}

#settings:active, #restart:active{
  transform: translate(0, 0.1rem);
  box-shadow: 0 0.2rem rgba(116, 111, 111, 0.624);
}

#title{
  text-align: center;
  font-size: 2.5rem;
}

h1{
  color:rgba(136, 131, 131, 0.905);
  text-shadow: 2px 2px #4b2727;
  margin-top: 10px; 
}

#container{
  display: flex;
  justify-content: center;
  align-items: center;
}

.gameboard {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  width: 40%;
  height: 40%;
  margin-bottom: 5%;
}

  
.square { 
    cursor: pointer;
    background-color: transparent;
    border: 3px solid rgba(136, 131, 131, 0.905);
    font-size: 7rem;
    font-family: 'Indie Flower', cursive;
    padding-bottom: 10%;
    color:rgba(72, 5, 5, 0.624);
  }


  .square.brdright{
    border-right: none;
  }


  .square.brdleft{
    border-left: none;
  }

  .square.brdtop{
    border-top: none;
  }

  .square.brdbottom{
    border-bottom: none;
  }

  .square:hover{
    background-color: rgba(10, 0, 0, 0.2);
  }


  @media screen and (max-width:900px) {
    .gameboard{
      width: 65%;
      height: 65%;
    }
  }

  @media screen and (max-width:600px) {
    .gameboard{
      width: 95%;
      height: 95%;
    }
    #title{
      font-size:1.5em;
    }
  }

